<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <include layout="@layout/toolbar_remind_list"/>

    <RelativeLayout
        android:id="@+id/rlAccountSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/ivAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="11dp"
            android:background="@drawable/id"
            android:padding="4dp" />

        <TextView
            android:id="@+id/tvAccountSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@id/ivAccount"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlAlarmSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="11dp"
            android:background="@drawable/alarm"
            android:padding="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@id/ivAlarm"
            android:text="@string/alarm_settings"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="18dp"
            android:switchMinWidth="38dp"
            android:thumb="@drawable/switch_thumb_selector"
            android:track="@drawable/switch_track" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLicenseSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="11dp"
            android:background="@drawable/license"
            android:padding="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@id/ivLicense"
            android:text="@string/license_settings"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDontaeSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivDonate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="11dp"
            android:background="@drawable/donate"
            android:padding="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@id/ivDonate"
            android:text="@string/donate_settings"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlRateSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="11dp"
            android:background="@drawable/evaluate"
            android:padding="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@id/ivRate"
            android:text="@string/rate_settings"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlVersionSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="11dp"
            android:background="@drawable/version"
            android:padding="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@id/ivVersion"
            android:text="@string/version_number_settings"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="14dp"
            android:text="@string/version_num_settings"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLogoutSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="11dp"
            android:background="@drawable/logout"
            android:padding="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@id/ivLogout"
            android:text="@string/logout_settings"
            android:textColor="@color/greyscale40"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>